--- a/styles/style.css
+++ b/styles/style.css
@@ -44,3 +44,74 @@
     font-weight: 400;
     line-height: 26px;
 }
+
+/* Styles for header section  */
+/* Header nav part  */
+.header {
+    margin-top: 50px;
+}
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+nav .nav-logo {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+nav .nav-logo h1 {
+    font-size: 2.1rem;
+    font-weight: 800;
+}
+nav .nav-logo h1 span {
+    color: var(--common-color);
+}
+
+.nav-links ul {
+    display: flex;
+}
+
+.nav-links ul li {
+    margin-left: 30px;
+    list-style-type: none;
+}
+
+.nav-links ul li a {
+    text-decoration: none;
+    color: #424247;
+    font-size: 1.2rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal
+}
+.nav-links ul li a.active {
+    color: var(--common-color);
+}
+.hamburger {
+    display: none;
+    margin-right: 25px;
+    font-size: 2rem;
+}
+
+/* Responsive Design for mobile  */
+@media screen and (max-width: 600px) {
+    /* responsive for nav  */
+    .nav-links ul {
+        display: none;
+    }
+    .hamburger {
+        display: block;
+    }
+}
+
+/* Responsive Design for tablate  */
+@media screen and (min-width: 600px) and (max-width:992px) {
+    /* responsive for nav  */
+    .nav-links ul {
+        display: none;
+    }
+    .hamburger {
+        display: block;
+    }
+}
