--- a/styles/style.css
+++ b/styles/style.css
@@ -93,9 +93,79 @@ nav .nav-logo h1 span {
     margin-right: 25px;
     font-size: 2rem;
 }
+/* Header banner part  */
+.header .banner {
+    background: linear-gradient(180deg, rgba(19, 19, 24, 0.80) 0%, rgba(19, 19, 24, 0.00) ),url("../Images/Group\ 13\ \(1\)\ \(1\).png");
+    min-height: 500px;
+    width: 100%;
+    background-repeat: no-repeat;
+    margin-top: 30px;
+    border-radius: 1rem;
+}
+.banner .banner-text {
+    text-align: center;
+    padding-top: 100px;
+}
+.banner .banner-text h1 {
+    color: #FFF;
+    font-size: 4rem;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    margin-bottom: 15px;
+}
+.banner .banner-text p {
+    color: #fff;
+}
+.banner .banner-inputs {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 30px;
+}
+.banner .inputs-container {
+    background-color: rgba(255, 255, 255, 0.30);
+    padding: 20px 30px;
+    border-radius: 1rem;
+}
+.banner .inputs-container input,select {
+    margin-left: 20px;
+    width: 200px;
+    height: 50px;
+    border: 0;
+    border-radius: 10px;
+    padding: 0 10px;
+    font-size: 1rem;
+    font-weight: 800;
+    color: rgba(19, 19, 24, 0.50);
+}
+.inputs-container button {
+    color: #fff;
+    width: 200px;
+    height: 50px;
+    margin-left: 10px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* Responsive Design for mobile  */
 @media screen and (max-width: 600px) {
+    .header {
+        padding: 20px;
+    }
     /* responsive for nav  */
     .nav-links ul {
         display: none;
@@ -103,15 +173,76 @@ nav .nav-logo h1 span {
     .hamburger {
         display: block;
     }
+    /* responsive for banner  */
+    .header .banner {
+        height: 500px;
+    }
+    .banner .banner-text {
+        padding-top: 10px;
+    }
+    .banner .banner-text h1 {
+        font-size: 1.8rem;
+    }
+    .banner .banner-text p {
+        padding: 0 20px;
+    }
+    .banner .banner-inputs {
+        padding: 0 20px;
+    }
+    .banner .inputs-container {
+        text-align: center;
+    }
+    .banner .inputs-container input,select {
+        margin-top: 20px;
+        margin-left: 0;
+        width: 100%;
+    }
+    .inputs-container button {
+        margin-top: 20px;
+        margin-left: 0;
+        width: 100%;
+    }
+    
 }
-
 /* Responsive Design for tablate  */
 @media screen and (min-width: 600px) and (max-width:992px) {
+    .header {
+        padding: 0 20px;
+    }
     /* responsive for nav  */
     .nav-links ul {
         display: none;
     }
     .hamburger {
         display: block;
+    }
+      /* responsive for banner  */
+      .header .banner {
+        height: 500px;
+    }
+    .banner .banner-text {
+        padding-top: 10px;
+    }
+    .banner .banner-text h1 {
+        font-size: 1.8rem;
+    }
+    .banner .banner-text p {
+        padding: 0 20px;
+    }
+    .banner .banner-inputs {
+        padding: 0 20px;
+    }
+    .banner .inputs-container {
+        text-align: center;
+    }
+    .banner .inputs-container input,select {
+        margin-top: 20px;
+        margin-left: 0;
+        width: 100%;
+    }
+    .inputs-container button {
+        margin-top: 20px;
+        margin-left: 0;
+        width: 100%;
     }
 }
