--- a/styles/style.css
+++ b/styles/style.css
@@ -340,7 +340,6 @@ nav .nav-logo h1 span {
     align-items: center;
     justify-content: center;
 }
-
 .discounts .discounts-text {
     text-align: center;
 }
@@ -430,9 +429,24 @@ nav .nav-logo h1 span {
 .satorini-content > button {
     margin: 0 60px;
 }
+/* Styles for simple-place part  */
+.simple-place {
+    margin-top: 50px;
+    display: flex;
+}
+.simple-place .simple-place-text {
+    width: 50%;
+}
 
-
-
+.simple-place .simple-place-video {
+    width: 50%;
+    border-radius: 16px;
+}
+.simple-place .simple-place-video video {
+    width: 100%;
+    height: 100%;
+    border-radius: 16px;
+}
 
 
 
@@ -608,7 +622,20 @@ nav .nav-logo h1 span {
     .satorini-content > button {
         margin: 20px;
     }
+    .simple-place {
+        margin-top: 20px;
+        flex-direction: column;
+    }
+    .simple-place .simple-place-text {
+        width: 100%;
+    }
+    
+    .simple-place .simple-place-video {
+        width: 100%;
+        margin-top: 20px;
+    }
 }
+
 /* Responsive Design for tablate  */
 @media screen and (min-width: 600px) and (max-width:992px) {
     .header {
@@ -767,5 +794,18 @@ nav .nav-logo h1 span {
     }
     .satorini-content > button {
         margin: 20px;
+    }
+    /* Styles for simple-place part  */
+    .simple-place {
+        margin-top: 20px;
+        flex-direction: column;
+    }
+    .simple-place .simple-place-text {
+        width: 100%;
+    }
+    
+    .simple-place .simple-place-video {
+        width: 100%;
+        margin-top: 20px;
     }
 }
