--- a/styles/style.css
+++ b/styles/style.css
@@ -500,6 +500,39 @@ nav .nav-logo h1 span {
     color: #fff;
     text-align: center;
 }
+/* Styles for winter travels */
+.winter {
+    margin-top: 50px;
+    text-align: center;
+}
+.winter > h2 {
+    font-size: 4rem;
+    color: #131318;
+    margin-bottom: 20px;
+}
+.winter-travel {
+    background: linear-gradient(180deg, rgba(19, 19, 24, 0.80) 0%, rgba(19, 19, 24, 0.00) ),url("../Images/winter2.avif");
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 500px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    border-radius: 16px;
+    text-align: center;
+}
+.winter-travel #special-text {
+    color: var(--common-color);
+    font-size: 5rem;
+}
+.winter-travel h1 {
+    color: #fff;
+}
+.winter-travel p {
+    color: #fff;
+}
 
 /* Responsive Design for mobile  */
 @media screen and (max-width: 600px) {
