--- a/styles/style.css
+++ b/styles/style.css
@@ -45,7 +45,6 @@
     font-weight: 400;
     line-height: 26px;
 }
-
 /* Styles for header section  */
 /* Header nav part  */
 .header {
@@ -68,16 +67,13 @@ nav .nav-logo h1 {
 nav .nav-logo h1 span {
     color: var(--common-color);
 }
-
 .nav-links ul {
     display: flex;
 }
-
 .nav-links ul li {
     margin-left: 30px;
     list-style-type: none;
 }
-
 .nav-links ul li a {
     text-decoration: none;
     color: #424247;
@@ -147,7 +143,6 @@ nav .nav-logo h1 span {
     margin-left: 10px;
 }
 /* Styles for main section  */
-
 /* Main our tours part  */
 .main .tours {
     display: flex;
@@ -330,7 +325,6 @@ nav .nav-logo h1 span {
     background: (233, 68, 68, 0.05);
 }
 /* Styles for Deals & Discounts part  */
-
 .discounts {
     margin-top: 50px;
 }
@@ -380,7 +374,6 @@ nav .nav-logo h1 span {
     align-items: center;
     justify-content: end;
 }
-
 .discounts .discount-contents .satorini1 .satorini-content {
     min-height: 300px;
     width: 40%;
@@ -389,7 +382,6 @@ nav .nav-logo h1 span {
     margin-right: 70px;
     border-radius: 16px;
 }
-
 .discounts .discount-contents .satorini2 .satorini-content {
     min-height: 300px;
     width: 40%;
@@ -400,7 +392,6 @@ nav .nav-logo h1 span {
     transform: rotateY(180deg);
     border-radius: 16px;
 }
-
 .discounts .discount-contents .satorini3 .satorini-content {
     min-height: 300px;
     width: 40%;
@@ -410,7 +401,6 @@ nav .nav-logo h1 span {
     margin-right: 70px;
     border-radius: 16px;
 }
-
 .satorini-content .satorini-icons {
     display: flex;
     justify-content: space-evenly;
@@ -532,6 +522,35 @@ nav .nav-logo h1 span {
 }
 .winter-travel p {
     color: #fff;
+}
+/* Styles for footer section  */
+.footer {
+    margin-top: 150px;
+    height: 502px;
+    background: (19, 19, 24, 0.05);
+}
+.footer .footer-content {
+    text-align: center;
+}
+.footer .footer-content .footer-logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    gap: 20px;
+    margin-bottom: 20px;
+    font-size: 2rem;
+}
+.footer .footer-content .footer-logo h1 span {
+    color: var(--common-color);
+}
+.footer .footer-content .footer-icons i {
+    margin: 20px;
+    font-size: 2rem;
+}
+.footer .footer-content .copy {
+    margin: 20px;
+    font-size: 2rem;
 }
 
 /* Responsive Design for mobile  */
@@ -740,8 +759,21 @@ nav .nav-logo h1 span {
         padding: 10px 20px;
 
     }
+    /* responsive for footer  */
+    .footer {
+        margin-top: 50px;
+        padding: 20px;
+    }
+    .footer .footer-content .footer-logo {
+        gap: 5px;
+        margin-bottom: 10px;
+        font-size: 1.5rem;
+    }
+    .footer .footer-content .footer-icons i {
+        margin: 10px;
+        font-size: 2rem;
+    }
 }
-
 /* Responsive Design for tablate  */
 @media screen and (min-width: 600px) and (max-width:992px) {
     .header {
@@ -876,7 +908,6 @@ nav .nav-logo h1 span {
     .discounts .discount-contents .satorini2 .satorini-content {
         width: 100%;
     }
-    
     .discounts .discount-contents .satorini3 .satorini-content {
         width: 100%;
     }
@@ -909,7 +940,6 @@ nav .nav-logo h1 span {
     .simple-place .simple-place-text {
         width: 100%;
     }
-    
     .simple-place .simple-place-video {
         width: 100%;
         margin-top: 20px;
